force-app/main/default/objects/Expense_Number__c/Expense_Number__c.object-meta.xml
<CustomObject>
    <label>Expense</label>
    <nameField>
        <displayFormat>EXP-{YYYY}-{MM}-{0000000000}</displayFormat>
        <label>Expense Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>