force-app/main/default/objects/Expense_Number__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <inlineHelpText>Expenses Approval date</inlineHelpText>
    <label>Approved Date</label>
    <type>Date</type>
</CustomField>