force-app/main/default/objects/Expense_Number__c/fields/Approver__c.field-meta.xml
<CustomField>
    <fullName>Approver__c</fullName>
    <formula>Owner:User.Manager.FirstName  &amp; &apos; &apos;&amp; Owner:User.Manager.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approver</label>
    <type>Text</type>
</CustomField>