force-app/main/default/objects/Expense_Number__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fuming Sparrow</fullName>
            </value>
            <value>
                <fullName>Green Thread Holdings</fullName>
            </value>
            <value>
                <fullName>Green Thread Property</fullName>
            </value>
            <value>
                <fullName>Green Thread Technology</fullName>
            </value>
            <value>
                <fullName>Headwater Farms</fullName>
            </value>
            <value>
                <fullName>Humboldt Headwaters</fullName>
            </value>
            <value>
                <fullName>Incensed Iguana</fullName>
            </value>
            <value>
                <fullName>Irrational Raccoon</fullName>
            </value>
            <value>
                <fullName>Yelling Yeti</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>