force-app/main/default/objects/Expense_Number__c/fields/Expense_Approver__c.field-meta.xml
<CustomField>
    <fullName>Expense_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Expense report approver</description>
    <label>Expense Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>