force-app/main/default/objects/Expense_Number__c/fields/ExpenseName__c.field-meta.xml
<CustomField>
    <fullName>ExpenseName__c</fullName>
    <inlineHelpText>Expense Name</inlineHelpText>
    <label>Expense Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>