force-app/main/default/objects/Expense_Number__c/fields/Reimbursed__c.field-meta.xml
<CustomField>
    <fullName>Reimbursed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if Approved and Reimbured</inlineHelpText>
    <label>Reimbursed</label>
    <type>Checkbox</type>
</CustomField>