force-app/main/default/objects/Expense_Number__c/fields/Reimbursed_Date__c.field-meta.xml
<CustomField>
    <fullName>Reimbursed_Date__c</fullName>
    <inlineHelpText>Reimbursed Pay Period</inlineHelpText>
    <label>Reimbursed Date</label>
    <type>Date</type>
</CustomField>