force-app/main/default/objects/Expense_Number__c/fields/Total_Expense_Amount_del__c.field-meta.xml
<CustomField>
    <fullName>Total_Expense_Amount_del__c</fullName>
    <inlineHelpText>Total Amount to be reimbursed</inlineHelpText>
    <label>Total Expense Amount</label>
    <summarizedField>Expense_Line__c.Line_Total_Amount__c</summarizedField>
    <summaryForeignKey>Expense_Line__c.ExpenseNumber__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>