force-app/main/default/objects/Expense_Number__c/fields/TotalExpenseLines__c.field-meta.xml
<CustomField>
    <fullName>TotalExpenseLines__c</fullName>
    <label>Total Expense Lines</label>
    <summaryForeignKey>Expense_Line__c.ExpenseNumber__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>