force-app/main/default/objects/Expense_Number__c/recordTypes/Expense.recordType-meta.xml
<RecordType>
    <fullName>Expense</fullName>
    <active>true</active>
    <description>New Expense for Review/Approval</description>
    <label>Expense</label>
</RecordType>