force-app/main/default/objects/Expense_Number__c/recordTypes/Expense_Admin.recordType-meta.xml
<RecordType>
    <fullName>Expense_Admin</fullName>
    <active>true</active>
    <description>Admin view Expense list</description>
    <label>Expense - Admin</label>
</RecordType>