force-app/main/default/objects/Expense_Number__c/validationRules/Validate_Reimbursed_and_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Reimbursed_and_Status</fullName>
    <active>true</active>
    <errorConditionFormula>Reimbursed__c = true &amp;&amp;
Reimbursed_Date__c  &lt;&gt; null &amp;&amp;
TEXT(ExpenseStatus__c) &lt;&gt; &apos;Approved&apos;</errorConditionFormula>
    <errorDisplayField>ExpenseStatus__c</errorDisplayField>
    <errorMessage>Please Submit Expense report for Approval and then try again to update Reimbursed information.</errorMessage>
</ValidationRule>