force-app/main/default/objects/Expense_Number__c/validationRules/Validate_Reimbursed_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Reimbursed_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Reimbursed__c  = true &amp;&amp;  ISBLANK(Reimbursed_Date__c )</errorConditionFormula>
    <errorDisplayField>Reimbursed_Date__c</errorDisplayField>
    <errorMessage>Please Select Reimbursed date.</errorMessage>
</ValidationRule>