force-app/main/default/objects/Expense_Number__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>ExpenseStatus__c</columns>
    <columns>Expense_Approver__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>ExpenseName__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>Project__c</columns>
    <columns>TotalExpenseLines__c</columns>
    <columns>TotalExpenseAmount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Reimbursed__c</columns>
    <columns>Reimbursed_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>