force-app/main/default/objects/Expense_Number__c/listViews/Approved_and_Not_Reimbursed.listView-meta.xml
<ListView>
    <fullName>Approved_and_Not_Reimbursed</fullName>
    <columns>NAME</columns>
    <columns>TotalExpenseLines__c</columns>
    <columns>Approved_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>TotalExpenseAmount__c</columns>
    <columns>Project__c</columns>
    <columns>Reimbursed__c</columns>
    <columns>Reimbursed_Date__c</columns>
    <columns>Expense_Approver__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExpenseStatus__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <filters>
        <field>Reimbursed__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Approved and Not Reimbursed</label>
</ListView>