force-app/main/default/objects/Expense_Number__c/listViews/Expenses_to_be_Approved.listView-meta.xml
<ListView>
    <fullName>Expenses_to_be_Approved</fullName>
    <columns>ExpenseStatus__c</columns>
    <columns>NAME</columns>
    <columns>ExpenseName__c</columns>
    <columns>Project__c</columns>
    <columns>TotalExpenseAmount__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ExpenseStatus__c</field>
        <operation>equals</operation>
        <value>Recalled,Rejected,Submitted</value>
    </filters>
    <label>Expenses to be Approved</label>
</ListView>