force-app/main/default/objects/Expense_Number__c/listViews/My_Expenses.listView-meta.xml
<ListView>
    <fullName>My_Expenses</fullName>
    <columns>NAME</columns>
    <columns>Approved_Date__c</columns>
    <columns>ExpenseName__c</columns>
    <columns>ExpenseStatus__c</columns>
    <columns>Project__c</columns>
    <columns>Reimbursed_Date__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>TotalExpenseAmount__c</field>
        <operation>greaterOrEqual</operation>
        <value>0</value>
    </filters>
    <label>My Expenses</label>
</ListView>